# advance-scenario-generator

./: .gitignore  1.16.0  Dockerfile  README.md  api.py  app.py  config.py  credentials.json  data_io.py  docker-compose.yml  embeddings.py  exposures.py  generative.py  matching.py  pipeline_flow.py  portfolio.py  pricing.py  proxies.csv  proxy_match.py  proxy_shocks.csv  requirements.txt  rf_shocks.csv  scenariogen.py  shocksim.py  synthetic_portfolio.csv  synthetic_univerese_generator.py  synthetic_universe.csv  universe.csv
genai_trading_tool/: README.md  api.py  app.py  config.py  pyproject.toml  requirements.txt
genai_trading_tool/modules/: backtest.py  dataio.py  embeddings.py  narrative.py  pnl.py  riskmap.py  shocksim.py
modules/: backtest.py  dataio.py  embeddings.py  narrative.py  pnl.py  riskmap.py  shocksim.py
tests/: test_assets.py  test_embeddings.py  test_pipeline.py  test_pricing.py  test_shocksim.py
